# CMakeList.txt : CMake project for CMakeProject6, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (myDevContainer1 "myDevContainer1.cpp" "myDevContainer1.h")

# TODO: Add tests and install targets if needed.
